--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Streamdata Gallery
-url: instagram.api.streamdata.gallery
+title: Streamdata Gallery Instagram
+url: instagram.streamdata.gallery
 tag: Instagram
 markdown: kramdown
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md", ".DS_Store"]
-github_user: streamdata-gallery-organizations
+github_user: streamdata-gallery
 github_repo: instagram
 github_branch: master
 collections:
